samples/_failures_safe/1761437390_58254d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20991928.c: In function ‘main’:
./samples/SAFE/__tmp_20991928.c:155:5: error: expected expression at end of input
  155 |     size_t input_len = strlen((char*)
      |     ^~~~~~
./samples/SAFE/__tmp_20991928.c:155:5: error: expected declaration or statement at end of input
